z-index fix

--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -63,6 +63,8 @@
 html, body {
     height  : 100%;
     overflow: hidden;
+    user-select: none;
+    -webkit-touch-callout: none;
 }
 
 *:focus {
@@ -160,7 +162,7 @@ html, body {
 }
 
 #onePulse {
-  animation: pulse 3s ease-out infinite;
+  animation: pulse 3s 0s ease-out infinite;
 }
 #twoPulse {
   animation: pulse 3s 0.3s ease-out infinite;
@@ -171,7 +173,7 @@ html, body {
 
 @keyframes "pulse" {
  0% {
-    transform: scale(.2);
+    transform: scale(.25);
     opacity: 0.0;
  }
  10% {
